<?xml version="1.0"?>
<package format="3">
  <name>usb_camera_package</name>
  <version>0.0.1</version>
  <description>ROS2 package for publishing USB camera images</description>

  <maintainer email="ghostfly233@sjtu.edu.com">Zibin Liu</maintainer>
  <license>Apache-2.0</license>

  <!-- 依赖项 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>

  <!-- 传感器相关 -->
  <depend>camera_info_manager</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
